# ms_thesis

./: README.md  ajsma.py  feature_engineering.py  model.py  pyproject.toml  test.py
models/: Oracle_Adam.pt
src/: train.py
