[tool.poetry]
name = "devi-ms-thesis"
version = "0.1.0"
description = "master's thesis source code"
authors = ["terminaldweller <devi@terminaldweller.com>"]
license = "GPL3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
numpy = "^1.24.3"
torch = "^1.13"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.0.2.230605"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
